# fontopia-mirror

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  READMEkeys  THANKS  config.h.in  configure  configure.ac
info/: Makefile.am  Makefile.in  fontopia.info  fontopia.texi
man/: Makefile.am  Makefile.in
man/man1/: fontopia.1
src/: args.c  defs.h  font_ops.c  font_ops.h  glyph.c  glyph.h  glyphext.c  glyphinfo.c  keys.c  main.c  menu.h  menu_generic.c  metadata.c  metadata.h  metrics.c  opensave.c  readme.c  status.c  unitab.c  view.c  view.h
src/modules/: bdf.c  bdf.h  bdf_hash.c  bdf_helper.c  cp.c  cp.h  cp_include.h  installmod.h  modules.c  modules.h  pcf.c  pcf.h  psf.c  psf.h  raw.c  raw.h
